--- a/Contact.html
+++ b/Contact.html
@@ -174,7 +174,7 @@
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
                 <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
-                    electronics to developing websites, software, and apps, we offer a wide range of services to help
+                    electronics to developing websites, software and application. we offer a wide range of services to help
                     businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
                     processes more efficient and effective. Our goal is to use technology to solve problems and drive
                     growth for our clients.</p>
@@ -202,7 +202,7 @@
                     <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
                 <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
-                    Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
+                    Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
                     <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
                             class="fab fa-facebook-square"></i></a>
