--- a/Electrical.html
+++ b/Electrical.html
@@ -67,7 +67,7 @@
         <section id="itimghideandview" class=" ">
             <div class="container">
                 <h2 class=" fw-bold ">Panel design</h2>
-                <p class="">We specialize in electrical control Panel Design, SLDA, GA, and wiring diagram services. Our
+                <p class="">We specialize in electrical control Panel Design, SLDA, GA and wiring diagram services. Our
                     expertise ensures precision and reliability in every project. Trust us to tailor solutions to your
                     needs, ensuring efficiency and excellence in electrical design.</p>
                 <button type="button" class="btn btn-secondary mb-1 ">Get A Quote</button>
@@ -91,8 +91,8 @@
                                     DOL
                                     to advanced VFD, covering both conventional and intelligent controls. Explore
                                     detailed
-                                    ACB, VCB power, and control circuit diagrams, including innovative schemes like auto
-                                    changeover and synchronization. Experience electrical excellence, simplified.</p>
+                                    ACB, VCB power and control circuit diagrams, including innovative schemes like auto
+                                    changeover and synchronization. Experience electrical excellence simplified.</p>
                             </div>
                         </div>
 
@@ -106,10 +106,10 @@
                                 <p class="panelfontdiv">Unleash precision effortlessly with our tailored General
                                     Arrangement (GA) Diagrams for
                                     switchboards and control panels. From clear dimensions to feeder locations, door
-                                    equipment details, and more, we customize based on your needs, site space, and bus
+                                    equipment details and more. we customize based on your needs, site space and bus
                                     duct
-                                    locations. Whether it's LV or MV switchboards like PCC, MCC, PMCC, or specialized
-                                    panels, we've got you covered. Simplify your project—share your BOQ, feeder list,
+                                    locations. Whether it's LV or MV switchboards like PCC, MCC, PMCC or specialized
+                                    panels. we've got all Aspects covered. Simplify your project—share your BOQ, feeder list
                                     and
                                     Tentative GA for guaranteed success.</p>
                             </div>
@@ -125,10 +125,10 @@
                                 <p class="panelfontdiv">The Single Line Diagram (SLD) is a cornerstone in electrical
                                     systems. Our SLD delivers a
                                     comprehensive view, detailing feeder load, power components, door equipment, feeder
-                                    descriptions, tag numbers, feeder cable sizes, bus bar ratings, and fault level
+                                    descriptions, tag numbers, feeder cable sizes, bus bar ratings and fault level
                                     specifics. It also highlights line and bus PT, along with control transformer
                                     details.
-                                    To create a customized SLD, provide your customer BOQ, feeder list, final GA, and
+                                    To create a customized SLD, provide your customer BOQ, feeder list, final GA and
                                     wiring
                                     diagram. Experience technical excellence in shaping your electrical systems.</p>
 
@@ -151,17 +151,17 @@
                 <div class="col-lg-5  col-md-6">
                     <h2 class=" fw-bold ">preparation of panel specification & BOM</h2>
                     <div class="d-flex justify-content-center secitsolutionimgdiv ">
-                        <img class="img-fluid " src="./Diagram/BOM (1).png" alt="">
+                        <img class="img-fluid " src="./Diagram/BOM_ELECTRICAL.png" alt="">
                     </div>
                     <p>Craft the foundation of your projects with our expertise in precise panel specifications and a
                         comprehensive Bill of Material (BOM). Our detailed BOM serves as a clear scope of supply,
                         providing
-                        complete descriptions, catalog numbers, and component designations aligned with the scheme. This
+                        complete descriptions, catalog numbers and component designations aligned with the scheme. This
                         ensures accurate and thorough information, simplifying the component ordering process for your
                         purchase department. Additionally, our tailored panel specifications guarantee optimal
                         performance
                         and scalability for your specific requirements. For a detailed BOM and panel specifications, we
-                        require the final General Arrangement (GA), scheme, and a list specifying the make of
+                        require the final General Arrangement (GA) scheme and a list specifying the make of
                         components.
                         Trust us for meticulous BOM creation and panel specification that streamline your procurement
                         process and elevate your project success.</p>
@@ -347,7 +347,7 @@
                 <div class="col-lg-1 "></div>
 
                 <div id="itdiviot" class="col-lg-5 col-md-6">
-                    <h2 class=" fw-bold ">Design PLC Panels</h2>
+                    <h2 class=" fw-bold ">Design abd Manufacturing of PLC Panels</h2>
                     <div class="d-flex justify-content-center secitsolutionimgdiv ">
                         <img class="img-fluid " src="./panel/PLC.png" alt="">
                     </div>
@@ -379,7 +379,7 @@
             <!-- <div class="col-md-1"></div> -->
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
-                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software, and apps, we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
+                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application.  we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
             </div>
             <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
@@ -404,7 +404,7 @@
                     <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
                 <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
-                    Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
+                    Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
                     <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
                             class="fab fa-facebook-square"></i></a>
