--- a/Nproduct.html
+++ b/Nproduct.html
@@ -99,13 +99,13 @@
         </div>
         <div class="row ">
             <div class=" col-lg-1"></div>
-            <div class="col-lg-5 col-md-6 ">
+            <div class="col-lg-5 col-md-6">
                 <p>Discover our Multi channel AC/DC relay cards at Ennova Technology, providing versatile
                     solutions for efficient electrical control. These cards offer multiple channels to meet the
                     diverse needs of your applications. Our Relay Card is a cutting-edge solution designed to enhance
-                    control and automation in various applications.Engineered with precision
-                    and versatility,this relay card provides seamless integration,optimal
-                    performance, and reliability for your electrical.</p>
+                    control and automation in various applications. Engineered with precision
+                    and versatility this relay card provides seamless integration, optimal
+                    performance and reliability for your electrical System.</p>
                 <ul class="ulstyletype">
                     <li><i class="fa-solid fa-caret-right"></i><a href="./secondcv.html">12VDC Relay Card</a></li>
                     <li><i class="fa-solid fa-caret-right"></i><a href="./firstcv.html">24VDC Relay Card</a></li>
@@ -250,7 +250,7 @@
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
                 <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
-                    electronics to developing websites, software, and apps, we offer a wide range of services to help
+                    electronics to developing websites, software and application. we offer a wide range of services to help
                     businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
                     processes more efficient and effective. Our goal is to use technology to solve problems and drive
                     growth for our clients.</p>
@@ -278,7 +278,7 @@
                     <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
                 <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
-                    Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
+                    Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
                     <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
                             class="fab fa-facebook-square"></i></a>
