--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
             <div class="col-lg-5 col-md-6 font aboutpara" data-aos="fade-up" data-aos-duration="2500">
                 <h1>- Get to Know About us -</h1>
                 <h5>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
-                    electronics to developing websites, software, and apps, we offer a wide range of services to help
+                    electronics to developing websites, software and application. we offer a wide range of services to help
                     businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
                     processes more efficient and effective. Our goal is to use technology to solve problems and drive
                     growth for our clients.</h5>
@@ -93,7 +93,7 @@
                     <h2>In 2019,</h2>
                     <h5>
                         At Ennova Technology, our journey began in 2019 with a focus on electronics.
-                        Specializing in embedded hardware, software, firmware design, and PCB design services,
+                        Specializing in embedded hardware, software, firmware design and PCB design services.
                         we quickly established ourselves as pioneers in the field.
                     </h5>
                 </div>
@@ -103,17 +103,17 @@
                     <h2>In 2021,</h2>
                     <h5>
                         We expanded into electrical engineering, offering design and manufacturing solutions for
-                        various control panels, including PCC, MCC, VFD, and PLC panels.
+                        various control panels, including PCC, MCC, VFD and PLC panels.
                     </h5>
                 </div>
             </div>
             <div class="tl-container tl-left">
                 <div class="tl-content">
-                    <h2>In 2023</h2>
+                    <h2>In 2023,</h2>
                     <h5>
                         Driven by our commitment to innovation, we further diversified in 2023, venturing into
                         IT and IoT solutions. Today, we offer comprehensive services encompassing website
-                        development, software solutions, app development, and cutting-edge IoT solutions
+                        development, software solutions, app development and cutting-edge IoT solutions
                         tailored for industrial automation.
                     </h5>
                 </div>
@@ -123,7 +123,7 @@
                     <h2>In 2024,</h2>
                     <h5>
                         At Ennova Technology, we lead the way in technology innovation. With a passionate team
-                        and unwavering dedication to excellence, we empower businesses and communities with
+                        and unwavering dedication to excellence. we empower businesses and communities with
                         transformative technology solutions that shape a better tomorrow.
                     </h5>
                 </div>
@@ -140,8 +140,8 @@
 
     <section id="missionvidiv" class="container-fluid mt-5 ">
         <div class="row fandrow">
-            <div class="col-lg-1 col-md-1"></div>
-            <div class="col-md-10 col-lg-5 misvisdiv">
+            <!-- <div class="col-lg-1 col-md-1"></div> -->
+            <div class="  col-lg-6 misvisdiv">
                 <h1 class="missmendiv"> Vision And Mission </h1>
 
                 <div class="card mb-3 bordermivi" data-aos="zoom-in-down" data-aos-duration="2000">
@@ -154,7 +154,7 @@
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Vision</h5>
                                 <p class="card-text misvispara">To be a global leader in providing innovative,
-                                    sustainable, and
+                                    sustainable and
                                     integrated
                                     solutions in the fields of Industrial electronics and IT services, revolutionizing
                                     industries and empowering businesses worldwide.
@@ -175,7 +175,7 @@
                                 <h5 class="card-title fw-bold">Mission</h5>
                                 <p class="card-text misvispara">We are dedicated to delivering cutting-edge products and
                                     services that
-                                    exceed our clients' expectations. We strive for excellence in quality, innovation,
+                                    exceed our client's expectations. We strive for excellence in quality, innovation
                                     and
                                     customer satisfaction. Our mission is to contribute to a sustainable and
                                     technologically
@@ -264,7 +264,7 @@
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
                  
                 <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
-                    electronics to developing websites, software, and apps, we offer a wide range of services to help
+                    electronics to developing websites, software and application. we offer a wide range of services to help
                     businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
                     processes more efficient and effective. Our goal is to use technology to solve problems and drive
                     growth for our clients.</p>
@@ -292,7 +292,7 @@
                     <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
                 <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
-                    Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
+                    Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
                     <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
                             class="fab fa-facebook-square"></i></a>
