--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="60px" alt="">
+                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -110,7 +110,7 @@
                     <div class="carousel-caption">
                         <h1 class="animated fadeInRight">IT Solutions</h1>
                         <h5 class="animated fadeInRight">"Building Tomorrow's Excellence - Web Design, Software
-                            Development and Data Analytics Initiatives"</h5>
+                            Development and Data Analytics Initiatives."</h5>
                         <a href="./IT.html"> <button id="scrolbtn" class="">Learn More</button></a>
                     </div>
                 </section>
@@ -143,7 +143,7 @@
             <div class="col-lg-5 col-md-6 font aboutpara" data-aos="fade-up" data-aos-duration="2500">
                 <h1>- Get to Know About us -</h1>
                 <h5 class="mt-3">At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
-                    electronics to developing websites, software, and apps, we offer a wide range of services to help
+                    electronics to developing websites, software and applications. we offer a wide range of services to help
                     businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
                     processes more efficient and effective. Our goal is to use technology to solve problems and drive
                     growth for our clients.</h5>
@@ -247,7 +247,7 @@
                 <h1 class="pt-3 ">Welcome to Ennova Technology </h1>
 
                 <p>Founded 2019, our company has grown from a small startup to a prominent industry player. <br> Our
-                    journey is marked by perseverance, strategic expansion, and a strong commitment to customer
+                    journey is marked by perseverance, strategic expansion and a strong commitment to customer
                     satisfaction.
                 </p>
                 <h5 class="pb-4">Our Core Focus and Value</h5>
@@ -299,7 +299,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 margin-md-60">
-                    <h2 class="left-title">Some of Our Company Real Facts.</h2>
+                    <h2 class="left-title">Our Company Facts.</h2>
                     <p class="white">We are the responsible, flexible and responsive organisation of hard working team members.</p>
                 </div>
                 <div class="col-lg-7 mt-lg-0 mt-5">
@@ -343,7 +343,7 @@
             <!-- <div class="col-md-1"></div> -->
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
-                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software, and apps, we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
+                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and applications. we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
             </div>
             <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
@@ -368,7 +368,7 @@
                     <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
                 <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
-                    Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
+                    Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
                     <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
                             class="fab fa-facebook-square"></i></a>
