--- a/io.html
+++ b/io.html
@@ -161,8 +161,8 @@
                 <li><span>GPIO Pins:</span> Multiple (number may vary based on specific model)</li>
                 <li><span>Operating Voltage:</span> 24V DC</li>
                 <li><span>Operating Temperature:</span> (-20°C to +70°C)</li>
-                <li><span>Weight:</span> grams</li>
-                <li><span>Dimensions:</span> 205 mm(L) x 100mm (W) x 60mm (H) </li>
+                <li><span>Weight:</span> 450 grams</li>
+                <li><span>Dimensions:</span> 205 mm (L) x 100mm (W) x 60mm (H) </li>
                 <li><span>Power Consumption:</span> TBD (Dependent on operation mode and usage)</li>
             </ul>
         </div>
@@ -287,7 +287,7 @@
                         <div class="cardww" tabindex="0">
                             <img src="./IOT1/L2.jpg" alt="dddd" class="img-fluid">
                             <h5 class="card-title">Light signal column</h5>
-                            <p class="card-text">Millenium Slim Solid-State version
+                            <p class="card-text">Ennova's IO card Solid-State version
                                 can manage the flashing on light
                                 signal columns in order to make the
                                 lamp blink with equal ON/OFF times.</p>
@@ -402,7 +402,7 @@
                     <div class="cardmm">
                         <img src="./IOT1/D6.jpg" alt="dddd" class="img-fluid">
                         <h5 class="card-title">Automatic Shutters</h5>
-                        <p class="card-text">Millenium Slim can be used for
+                        <p class="card-text">Ennova's IO Card can be used for
                             simple roller shutter control that
                             requires scheduler and two-button
                             manual control (open / close)</p>
@@ -422,7 +422,7 @@
                     <div class="cardmm">
                         <img src="./IOT1/L2.jpg" alt="dddd" class="img-fluid">
                         <h5 class="card-title">Light signal column</h5>
-                        <p class="card-text">Millenium Slim Solid-State version
+                        <p class="card-text">Ennova's IO card Solid-State version
                             can manage the flashing on light
                             signal columns in order to make the
                             lamp blink with equal ON/OFF times.</p>
@@ -534,7 +534,7 @@
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
                 <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From
                     designing
-                    electronics to developing websites, software, and apps, we offer a wide range of services to
+                    electronics to developing websites, software and application. we offer a wide range of services to
                     help
                     businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
                     processes more efficient and effective. Our goal is to use technology to solve problems and
@@ -564,7 +564,7 @@
                     <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
                 <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
-                    Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
+                    Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
                     <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
                             class="fab fa-facebook-square"></i></a>
