--- a/relay.html
+++ b/relay.html
@@ -118,12 +118,12 @@
 
         <div class="col-lg-5 col-md-6">
             <!-- <h2 class=" fw-bold ">I/O Card</h2> -->
-            <p>Discover our Multichannel AC/DC relay cards at Ennova Technology, providing versatile
+            <p>Discover our Multi channel AC/DC relay cards at Ennova Technology, providing versatile
                 solutions for efficient electrical control. These cards offer multiple channels to meet the
                 diverse needs of your applications. Our Relay Card is a cutting-edge solution designed to enhance
                 control and automation in various applications.Engineered with precision
                 and versatility,this relay card provides seamless integration,optimal
-                performance, and reliability for your electrical </p>
+                performance and reliability for your electrical </p>
                 <ul class="ulstyletype">
                     <li><i class="fa-solid fa-caret-right"></i><a href="./secondcv.html">12VDC Relay Card</a></li>
                     <li><i class="fa-solid fa-caret-right"></i><a href="./firstcv.html">24VDC Relay Card</a></li>
@@ -144,7 +144,7 @@
         <ul>
             <li><span>Multi Voltage Compatibility:</span> Designed for 24VDC, 12VDC, 230VAC applications, offering
                 versatile compatibility</li>
-            <li><span>Configurable Channels:</span> Available in 2, 4, 6, and 8 channels, allowing precise control over
+            <li><span>Configurable Channels:</span> Available in 2, 4, 6 and 8 channels, allowing precise control over
                 multiple electrical circuits.</li>
             <li><span>Relay Contact Configuration:</span> Options include 1CO-SPDT and 2CO-DPDT, providing flexibility
                 for
@@ -208,71 +208,6 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>24VDC 1C0 2CH RELAY CARD</td>
-                    <td>ET-RLC-24V-2CH-1CO</td>
-                    <td>24V</td>
-                    <td>2</td>
-                    <td>SPDT</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>24VDC 1 CO 4CH RELAY CARD</td>
-                    <td>ET-RLC-24V-4CH-1CO</td>
-                    <td>24V</td>
-                    <td>4</td>
-                    <td>SPDT</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>24VDC 1 CO 6CH RELAY CARD</td>
-                    <td>ET-RLC-24V-6CH-1CO</td>
-                    <td>24V</td>
-                    <td>6</td>
-                    <td>SPDT</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>24VDC 1 CO 8CH RELAY CARD</td>
-                    <td>ET-RLC-24V-8CH-1CO</td>
-                    <td>24V</td>
-                    <td>8</td>
-                    <td>SPDT</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>24VDC 2 CO 2CH RELAY CARD</td>
-                    <td>ET-RLC-24V-2CH-2CO</td>
-                    <td>24V</td>
-                    <td>2</td>
-                    <td>DPDT</td>
-                </tr>
-                <tr>
-                    <td>6</td>
-                    <td>24VDC 2 CO 4CH RELAY CARD</td>
-                    <td>ET-RLC-24V-4CH-2CO</td>
-                    <td>24V</td>
-                    <td>4</td>
-                    <td>DPDT</td>
-                </tr>
-                <tr>
-                    <td>7</td>
-                    <td>24VDC 2 CO 6CH RELAY CARD</td>
-                    <td>ET-RLC-24V-6CH-2CO</td>
-                    <td>24V</td>
-                    <td>6</td>
-                    <td>DPDT</td>
-                </tr>
-                <tr>
-                    <td>8</td>
-                    <td>24VDC 2 CO 8CH RELAY CARD</td>
-                    <td>ET-RLC-24V-8CH-2CO</td>
-                    <td>24V</td>
-                    <td>8</td>
-                    <td>DPDT</td>
-                </tr>
-
-                <tr>
-                    <td>9</td>
                     <td>12VDC 1 CO 2CH RELAY CARD</td>
                     <td>ET-RLC-12V-2CH-1CO</td>
                     <td>12V</td>
@@ -280,7 +215,7 @@
                     <td>SPDT</td>
                 </tr>
                 <tr>
-                    <td>10</td>
+                    <td>2</td>
                     <td>12VDC 1CO 4CH RELAY CARD</td>
                     <td>ET-RLC-12V-4CH-1CO</td>
                     <td>12V</td>
@@ -288,7 +223,7 @@
                     <td>SPDT</td>
                 </tr>
                 <tr>
-                    <td>11</td>
+                    <td>3</td>
                     <td>12VDC 1CO 6CH RELAY CARD</td>
                     <td>ET-RLC-12V-6CH-1CO</td>
                     <td>12V</td>
@@ -296,7 +231,7 @@
                     <td>SPDT</td>
                 </tr>
                 <tr>
-                    <td>12</td>
+                    <td>4</td>
                     <td>12VDC 1CO 8CH RELAY CARD</td>
                     <td>ET-RLC-12V-8CH-1CO</td>
                     <td>12V</td>
@@ -304,7 +239,7 @@
                     <td>SPDT</td>
                 </tr>
                 <tr>
-                    <td>13</td>
+                    <td>5</td>
                     <td>12VDC 2 CO 2CH RELAY CARD</td>
                     <td>ET-RLC-12V-2CH-2CO</td>
                     <td>12V</td>
@@ -312,7 +247,7 @@
                     <td>DPDT</td>
                 </tr>
                 <tr>
-                    <td>14</td>
+                    <td>6</td>
                     <td>12VDC 2 C0 4CH RELAY CARD</td>
                     <td>ET-RLC-12V-4CH-2CO</td>
                     <td>12V</td>
@@ -320,7 +255,7 @@
                     <td>DPDT</td>
                 </tr>
                 <tr>
-                    <td>15</td>
+                    <td>7</td>
                     <td>12VDC 2 CO 6CH RELAY CARD</td>
                     <td>ET-RLC-12V-6CH-2CO</td>
                     <td>12V</td>
@@ -328,13 +263,79 @@
                     <td>DPDT</td>
                 </tr>
                 <tr>
-                    <td>16</td>
+                    <td>8</td>
                     <td>12VDC 2 CO 8CH RELAY CARD</td>
                     <td>ET-RLC-12V-8CH-2CO</td>
                     <td>12V</td>
                     <td>8</td>
                     <td>DPDT</td>
                 </tr>
+                <tr>
+                    <td>9</td>
+                    <td>24VDC 1C0 2CH RELAY CARD</td>
+                    <td>ET-RLC-24V-2CH-1CO</td>
+                    <td>24V</td>
+                    <td>2</td>
+                    <td>SPDT</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>24VDC 1 CO 4CH RELAY CARD</td>
+                    <td>ET-RLC-24V-4CH-1CO</td>
+                    <td>24V</td>
+                    <td>4</td>
+                    <td>SPDT</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td>24VDC 1 CO 6CH RELAY CARD</td>
+                    <td>ET-RLC-24V-6CH-1CO</td>
+                    <td>24V</td>
+                    <td>6</td>
+                    <td>SPDT</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>24VDC 1 CO 8CH RELAY CARD</td>
+                    <td>ET-RLC-24V-8CH-1CO</td>
+                    <td>24V</td>
+                    <td>8</td>
+                    <td>SPDT</td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td>24VDC 2 CO 2CH RELAY CARD</td>
+                    <td>ET-RLC-24V-2CH-2CO</td>
+                    <td>24V</td>
+                    <td>2</td>
+                    <td>DPDT</td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td>24VDC 2 CO 4CH RELAY CARD</td>
+                    <td>ET-RLC-24V-4CH-2CO</td>
+                    <td>24V</td>
+                    <td>4</td>
+                    <td>DPDT</td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td>24VDC 2 CO 6CH RELAY CARD</td>
+                    <td>ET-RLC-24V-6CH-2CO</td>
+                    <td>24V</td>
+                    <td>6</td>
+                    <td>DPDT</td>
+                </tr>
+                <tr>
+                    <td>16</td>
+                    <td>24VDC 2 CO 8CH RELAY CARD</td>
+                    <td>ET-RLC-24V-8CH-2CO</td>
+                    <td>24V</td>
+                    <td>8</td>
+                    <td>DPDT</td>
+                </tr>
+
+               
 
                 <tr>
                     <td>17</td>
@@ -424,7 +425,7 @@
         <!-- <div class="col-md-1"></div> -->
         <div class="col-md-12 col-lg-4">
             <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
-            <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software, and apps, we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
+            <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application. we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
         </div>
         <!-- <div class="col-md-1"></div> -->
         <div class="  col-lg-1"></div>
@@ -449,7 +450,7 @@
                 <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
             </div>
             <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
-                Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
+                Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
             <div id="iconssym">
                 <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
                         class="fab fa-facebook-square"></i></a>
