--- a/ITService.html
+++ b/ITService.html
@@ -77,7 +77,7 @@
                             alt="">
                 </div>
                 <p>Enhance your digital footprint with Ennova Technology, delivering top-notch website design, software
-                    development, IoT solutions, data analytics, and comprehensive IT services. Our customized approach
+                    development, IoT solutions, data analytics and comprehensive IT services. Our customized approach
                     extends to IoT app development and cloud connectivity, ensuring seamless integration and innovative
                     solutions that align perfectly with your business needs.</p>
                 <div class="row itimghide">
@@ -127,7 +127,7 @@
                     alt="">
                 </div>
                 <p>Transform your projects with us, where we expertly integrate software and hardware design, PCB
-                    development, and embedded firmware expertise. Our efficient approach ensures innovative solutions
+                    development and embedded firmware expertise. Our efficient approach ensures innovative solutions
                     from concept to implementation, tailored to your unique requirements.</p>
                 <div  class="row itimghide">
                     <div class="col-md-6 col-lg-12">
@@ -211,7 +211,7 @@
             <!-- <div class="col-md-1"></div> -->
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
-                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software, and apps, we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
+                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application. we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
             </div>
             <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
@@ -236,7 +236,7 @@
                     <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
                 <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
-                    Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
+                    Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
                     <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
                             class="fab fa-facebook-square"></i></a>
