--- a/thirdcv.html
+++ b/thirdcv.html
@@ -129,7 +129,7 @@
                     diverse needs of your applications. Our Relay Card is a cutting-edge solution designed to enhance
                     control and automation in various applications.Engineered with precision
                     and versatility,this relay card provides seamless integration,optimal
-                    performance, and reliability for your electrical Sysrem.</p>
+                    performance and reliability for your electrical Sysrem.</p>
                 <button type="button" class="btn btn-secondary">Get A Quote</button>
             </div>
             <div class="col-lg-1"></div>
@@ -141,7 +141,7 @@
             <ul>
                 <li><span>Multi Voltage Compatibility:</span> Designed for 230V AC Relay Card applications, offering
                     versatile compatibility</li>
-                <li><span>Configurable Channels:</span> Available in 2, 4, 6, and 8 channels, allowing precise control
+                <li><span>Configurable Channels:</span> Available in 2, 4, 6 and 8 channels, allowing precise control
                     over
                     multipleelectrical circuits.</li>
                 <li><span>Relay Contact Configuration:</span> Options include1CO-SPDT and 2CO-DPDT, providing
@@ -280,7 +280,7 @@
             <!-- <div class="col-md-1"></div> -->
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
-                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software, and apps, we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
+                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application. we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
             </div>
             <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
@@ -305,7 +305,7 @@
                     <p><i class="far fa-envelope"></i> development.ennovatech@gmail.com</p>
                 </div>
                 <p><i class="fa-solid fa-location-dot"></i> #Plot No.F45, Kupwad M.I.D.C road, Near TCI Freight.
-                    Kupwad, Dist.-Sangli, Maharashtra- 416436.</p>
+                    Kupwad, Dist-Sangli, Maharashtra- 416436.</p>
                 <div id="iconssym">
                     <a href="https://www.facebook.com/profile.php?id=100063876886966"> <i
                             class="fab fa-facebook-square"></i></a>
